[package]
name = "sbpp-ban-import"
version = "0.1.0"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2"
mysql = "*"
steamid-ng = "0.3.3"

[profile.release]
lto = true
opt-level = "z"